update index page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
 </head>
 <body>
     <h1>hello world!</h1>
+    <table>
+        <tr>
+            <td>Name</td> 
+            <td>Aljawhara</td>
+        </tr>
+        <tr>
+            <td>ID:</td> 
+            <td>Aljawhara110</td>
+        </tr>
+        <tr>
+            <td>Course:</td> 
+            <td>Web Enginerring</td>
+        </tr>
+    </table>
 </body>
 </html>
